--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply font-bold text-[120px] leading-[120px];
+  }
+
+  h2 {
+    @apply font-bold text-[28px] leading-[34px];
+  }
+
+  h3 {
+    @apply font-bold text-base leading-[19px] tracking-[15px] uppercase;
+  }
+
+  h4 {
+    @apply font-bold text-[13px] leading-[16px] tracking-[5px] uppercase;
+  }
+
+  .body-one {
+    @apply font-bold text-[14px] leading-[18px];
+  }
+
+  .body.two {
+    @apply font-bold text-[12px] leading-[14px];
+  }
+}
